--- a/charts/kuzzle/values.yaml
+++ b/charts/kuzzle/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   name: kuzzleio/kuzzle
-  tag: 2
+  tag: ""
   pullPolicy: Always
 
 imagePullSecrets: []
@@ -114,3 +114,18 @@ affinity: {}
 #       - name: my-volume
 #         mountPath: /path/to/my-volume
 extraInitContainers: []
+
+# Configuration of the ingress to the Kuzzle API
+ingress:
+  enabled: false
+  className: ""
+  annotations: {}
+  hosts: []
+    # - host: kuzzle.example.com
+    #   paths:
+    #     - path: /
+    #       pathType: Prefix
+  tls: []
+    # - secretName: my-certificate
+    #   hosts:
+    #     - kuzzle.example.com
