--- a/charts/webapp/values.yaml
+++ b/charts/webapp/values.yaml
@@ -73,3 +73,18 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+# Configuration of the ingress to the HTTP server
+ingress:
+  enabled: false
+  className: ""
+  annotations: {}
+  hosts: []
+    # - host: kuzzle.example.com
+    #   paths:
+    #     - path: /
+    #       pathType: Prefix
+  tls: []
+    # - secretName: my-certificate
+    #   hosts:
+    #     - kuzzle.example.com
