--- a/charts/paas-webapp/templates/ingressTCP.yaml
+++ b/charts/paas-webapp/templates/ingressTCP.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.ingressTCP.enabled }}
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRouteTCP
 metadata:
   name: {{ .Values.ingressTCP.name }}
