--- a/charts/kuzzle/Chart.yaml
+++ b/charts/kuzzle/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: kuzzle
-description: Kuzzle Kubernetes Chart
+description: Kuzzle Kubernetes chart compatible for ES7
 
 # A chart can be either an 'application' or a 'library' chart.
 #
@@ -14,10 +14,10 @@ type: application
 
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
-version: 1.4.0
+version: 1.5.0
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: 2.43.2
+appVersion: 2.47.0
